--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="main.css">
   
 </head>
-<body>
+<body style="background-color:black;">
   <div class="wrapper">
     <div class="text">
       <h1 class="info name">Ayush Rautwar</h1>
