--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
   <link rel="shortcut icon" href="logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src='fontawesome.js'></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="index.js"></script>
   <link rel="stylesheet" href="main.css">
-  
 </head>
 <body style="background-color:black;">
   <div class="wrapper">
     <div class="text">
-      <h1 class="info name">Ayush Rautwar</h1>
-      <h1 class="info">Aerospace Engineer and Computer Scientist</h1>
+      <i class="info name">Ayush Rautwar</i>
+      <h1 class="info">
+        <span
+          class="txt-rotate"
+          data-period="2000"
+          data-rotate='[ "Aerospace Engineer", "Computer Scientist" ]'>
+        </span>
+      </h1>
       <h1 class="info">
         <a style="color: #fff;" target="_blank" href="https://www.facebook.com/ayush.rautwar"><i class="fa fa-facebook"></i></a>
         &nbsp; &nbsp;
