--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
   <script src='fontawesome.js'></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="index.js"></script>
+  
   <link rel="stylesheet" href="main.css">
+  <script>
+    function load(){
+      document.getElementById("bod").style = "background-color:black; height: 100vh;";
+    }
+  </script>
+  <script src="index.js"></script>
 </head>
-<body style="background-color:black;">
+<body id="bod" style="background-color:black; height: 100vh; -webkit-filter: blur(20px); filter: blur(20px);">
   <div class="wrapper">
     <div class="text">
       <i class="info name">Ayush Rautwar</i>
