--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="buttons.css">
   <link rel="stylesheet" href="main.css">
-  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PN5ZMG0TLJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PN5ZMG0TLJ');
+  </script>
   <script>
     function load(){
       document.getElementById("bod").style = "background-color: black; height: 100vh;";
