--- a/tfjs/index.html
+++ b/tfjs/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
@@ -56,3 +58,4 @@
   <h4>Feel free to poke around the source code by inspecting element.</h4>
 </div>
 </body>
+</html>
