--- a/tfjs/index.html
+++ b/tfjs/index.html
@@ -13,41 +13,49 @@
 <h1 style="color: white; text-align: center;">Stock Prediction</h1>
 <div class="container">
   <div class="card" id="1">
-    <h3 class="title"></h3>
-    <div class="bar">
+      <form action="#" onsubmit="reval(1);">
+        <input type="text" class="title" id="1f" value="">
+      </form>
+      <div class="bar">
       <div class="emptybar"></div>
       <div class="filledbar"></div>
-      <h4 style="margin: 0; font-size: 40px;"></h4>
+      <h4 style="margin: 0; font-size: 40px; margin-top:10px;"></h4>
       <h4 style="margin: 0; position: relative"></h4>
       <h4 style="margin: 0; font-size: 40px;"></h4>
     </div>
   </div>
   <div class="card" id="2">
-    <h3 class="title"></h3>
-    <div class="bar">
+      <form action="#" onsubmit="reval(2);">
+        <input type="text" class="title" id="2f" value="">
+      </form>
+      <div class="bar">
       <div class="emptybar"></div>
       <div class="filledbar"></div>
-      <h4 style="margin: 0; font-size: 40px;"></h4>
+      <h4 style="margin: 0; font-size: 40px; margin-top:10px;"></h4>
       <h4 style="margin: 0; position: relative"></h4>
       <h4 style="margin: 0; font-size: 40px;"></h4>
     </div>
   </div>
   <div class="card" id="3">
-    <h3 class="title"></h3>
-    <div class="bar">
+      <form action="#" onsubmit="reval(3);">
+        <input type="text" class="title" id="3f" value="">
+      </form>
+      <div class="bar">
       <div class="emptybar"></div>
       <div class="filledbar"></div>
-      <h4 style="margin: 0; font-size: 40px;"></h4>
+      <h4 style="margin: 0; font-size: 40px; margin-top:10px;"></h4>
       <h4 style="margin: 0; position: relative"></h4>
       <h4 style="margin: 0; font-size: 40px;"></h4>
     </div>
   </div>
   <div class="card" id="4">
-    <h3 class="title"></h3>
-    <div class="bar">
+      <form action="#" onsubmit="reval(4);">
+        <input type="text" class="title" id="4f" value="">
+      </form>
+      <div class="bar">
       <div class="emptybar"></div>
       <div class="filledbar"></div>
-      <h4 style="margin: 0; font-size: 40px;"></h4>
+      <h4 style="margin: 0; font-size: 40px; margin-top:10px;"></h4>
       <h4 style="margin: 0; position: relative"></h4>
       <h4 style="margin: 0; font-size: 40px;"></h4>
     </div>
