--- a/tfjs/index.html
+++ b/tfjs/index.html
@@ -13,7 +13,7 @@
 <h1 style="color: white; text-align: center;">Stock Prediction</h1>
 <div class="container">
   <div class="card" id="1">
-      <form action="#" onsubmit="reval(1);">
+      <form action="#" onsubmit="reval(1); return false;">
         <input type="text" class="title" id="1f" value="">
       </form>
       <div class="bar">
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="card" id="2">
-      <form action="#" onsubmit="reval(2);">
+      <form action="#" onsubmit="reval(2); return false;">
         <input type="text" class="title" id="2f" value="">
       </form>
       <div class="bar">
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="card" id="3">
-      <form action="#" onsubmit="reval(3);">
+      <form action="#" onsubmit="reval(3); return false;">
         <input type="text" class="title" id="3f" value="">
       </form>
       <div class="bar">
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div class="card" id="4">
-      <form action="#" onsubmit="reval(4);">
+      <form action="#" onsubmit="reval(4); return false;">
         <input type="text" class="title" id="4f" value="">
       </form>
       <div class="bar">
