Add description of model

--- a/tfjs/index.html
+++ b/tfjs/index.html
@@ -64,6 +64,12 @@
 <div style="color: white; text-align: center; position: relative;">
   <h4>Hello! Welcome to my stock predicting bot that was trained using Tensorflow and deployed using Tensorflow JS!</h4>
   <h4>Feel free to poke around the source code by inspecting element.</h4>
+  <br>
+  <h3>How does the model work?</h3>
+  <h4>30 days of stock price → normalization and tanh activation → dense neural network → buy, sell, and hold "confidences"</h4>
+  <br>
+  <h3>How was the neural network trained?</h3>
+  <h4>This project implemented a deep q-networks, which was trained by replaying historical stock data to find patterns</h4>
 </div>
 </body>
 </html>
