--- a/tfjs/index.html
+++ b/tfjs/index.html
@@ -69,7 +69,7 @@
   <h4>30 days of stock price → normalization and tanh activation → dense neural network → buy, sell, and hold "confidences"</h4>
   <br>
   <h3>How was the neural network trained?</h3>
-  <h4>This project implemented a deep q-networks, which was trained by replaying historical stock data to find patterns</h4>
+  <h4>This project implemented a deep q-network, which was trained by replaying historical stock data to find patterns</h4>
 </div>
 </body>
 </html>
