--- a/surmount2/index.html
+++ b/surmount2/index.html
@@ -21,6 +21,7 @@ limitations under the License.
   <link rel="icon" href="gradientlogo.png">
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-vis@1.5.1/dist/tfjs-vis.umd.min.js"></script>
 </head>
@@ -115,8 +116,14 @@ limitations under the License.
             <div id="accuracyChart"></div>
             <!-- <div id="examplesPerSecCanvas"></div> -->
           </div>
+          <h3 style="color: black; text-align: center; padding-top:10px;">Backtest Results</h3>
+          <div>
+            <canvas id="myChart"></canvas>
+          </div>
         </div>
       </section>
+
+
 
     </div>
   </div>
