Fix textbox formatting:

--- a/surmount2/index.html
+++ b/surmount2/index.html
@@ -83,7 +83,7 @@ limitations under the License.
           </div>
           <div class="setting">
             <span class="setting-label">Stock tickers:</span>
-            <input id="stock" title="What comma separated tickers should the model manage?" onclick="document.getElementById('stock').style['width'] = 9*document.getElementById('stock').value.length +'px';" value="TQQQ, SPY, DIA, IWM, IVE, EFA, EFA, XLP, IAU, SLV, USO, SQQQ, JNK"></input>
+            <input id="stock" style="max-width: 70%" title="What comma separated tickers should the model manage?" onclick="document.getElementById('stock').style['width'] = 20+8*document.getElementById('stock').value.length +'px';" value="TQQQ, SPY, DIA, IWM, IVE, EFA, EFA, XLP, IAU, SLV, USO, SQQQ, JNK"></input>
           </div>
           <div class="setting">
             <span class="setting-label">Hidden Layer Size:</span>
