--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span
           class="txt-rotate"
           data-period="2000"
-          data-rotate='[ "Machine Learning Engineer", "Computer Scientist", "Entrepreneur" ]'>
+          data-rotate='[ "Software Engineer", "Entrepreneur" ]'>
         </span>
       </h1>
       <h1 class="info">
